# jogo-da-cobrinha

./: CMakeLists.txt  README.md
include/class/: food.h  snake.h
include/utils/: draw_utils.h  keycallback.h
src/: food.cpp  main.cpp  snake.cpp
utils/: draw.cpp  draw_utils.cpp  keycallback.cpp
